Implemented show purposes with memberships on frontend

--- a/frontend-application/src/app/components/header/header.component.html
+++ b/frontend-application/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
     <button mat-button mat-ripple routerLink="/">
       <span>Find upgrades of components</span>
     </button>
-    <button mat-button mat-ripple routerLink="/">
+    <button mat-button mat-ripple routerLink="/purposes">
       <span>Find the purpose</span>
     </button>
     <button mat-button mat-ripple routerLink="/symptoms">
