--- a/frontend-application/src/app/components/header/header.component.html
+++ b/frontend-application/src/app/components/header/header.component.html
@@ -7,6 +7,9 @@
     <button mat-button mat-ripple routerLink="/">
       <span>Search computer's components</span>
     </button>
+    <button mat-button mat-ripple routerLink="/cpuSearch">
+      <span>Search cpu</span>
+    </button>
     <button mat-button mat-ripple routerLink="/">
       <span>Find upgrades of components</span>
     </button>
