--- a/frontend-application/src/app/components/header/header.component.html
+++ b/frontend-application/src/app/components/header/header.component.html
@@ -10,6 +10,9 @@
     <button mat-button mat-ripple routerLink="/cpuSearch">
       <span>Search cpu</span>
     </button>
+    <button mat-button mat-ripple routerLink="/ssdSearch">
+      <span>Search ssd</span>
+    </button>
     <button mat-button mat-ripple routerLink="/">
       <span>Find upgrades of components</span>
     </button>
