--- a/frontend-application/src/app/components/search-ram/search-ram.component.html
+++ b/frontend-application/src/app/components/search-ram/search-ram.component.html
@@ -77,6 +77,11 @@
         <mat-header-cell *matHeaderCellDef> Type </mat-header-cell>
         <mat-cell *matCellDef="let ram"> {{ram.type}} </mat-cell>
       </ng-container>
+
+      <ng-container matColumnDef="rgb">
+        <mat-header-cell *matHeaderCellDef> Has rgb </mat-header-cell>
+        <mat-cell *matCellDef="let ram"> {{ram.hasRGB}} </mat-cell>
+      </ng-container>
   
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
