--- a/frontend-application/src/app/components/cpu-search/cpu-search.component.html
+++ b/frontend-application/src/app/components/cpu-search/cpu-search.component.html
@@ -1,6 +1,4 @@
-<mat-card elevation="5" fxFlex class="content">
-    <div class="row">
-      <div>
+<mat-card>
     <mat-form-field class="ml" appearance="outline">
       <mat-label>Minimum number of CPU cores</mat-label>
       <input type="number" matInput [(ngModel)]="minCores" placeholder="Enter minimum CPU cores number"/>
@@ -31,65 +29,66 @@
       <input type="number" matInput [(ngModel)]="maxClockRate" placeholder="Enter minimum clock rate"/>
       <mat-icon matPrefix>search</mat-icon>
     </mat-form-field>
-      </div>
-    </div>
-    <button class="btn" mat-raised-button type="submit" color="primary" (click)="searchCpu()">Search for purposes</button>
+    <button class="btn" mat-raised-button type="submit" color="primary" (click)="searchCpu()">Search</button>
     <button *ngIf="isSearched" mat-button mat-ripple (click)="clearSearch()">
       <mat-icon color= "primary" matTooltip="clear search"> cancel_presentation</mat-icon>
     </button>
   </mat-card>
-  
+
   <div *ngIf="isSearched"class="container">
     <div class="table-header" *ngIf="isSearched">
-      <p class="table-title">CPUS</p>
-    <mat-table #table [dataSource]="dataSource">
- 
+      <p class="table-title">CPUs</p>
+      <p *ngIf="notFound" class="table-title"> No CPUs found for entered parameters!</p>
+    </div>
+    <table *ngIf="isSearched" mat-table [dataSource]="dataSource">
+
       <ng-container matColumnDef="cpuNames">
-        <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-        <mat-cell *matCellDef="let cpu"> {{cpu.cpuName}} </mat-cell>
+        <th mat-header-cell *matHeaderCellDef class="cell-center"> Name </th>
+        <td mat-cell *matCellDef="let cpu" class="cell-center"> {{cpu.cpuName}} </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="cpuCores">
-        <mat-header-cell *matHeaderCellDef> Core </mat-header-cell>
-        <mat-cell *matCellDef="let cpu"> {{cpu.cpuCores}} </mat-cell>
+        <th mat-header-cell *matHeaderCellDef class="cell-center"> Core </th>
+        <td mat-cell *matCellDef="let cpu" class="cell-center"> {{cpu.cpuCores}} </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="cpuClockRate">
-        <mat-header-cell *matHeaderCellDef> Clock Rate </mat-header-cell>
-        <mat-cell *matCellDef="let cpu"> {{cpu.cpuClockRate}} </mat-cell>
+        <th mat-header-cell *matHeaderCellDef class="cell-center"> Clock Rate </th>
+        <td mat-cell *matCellDef="let cpu" class="cell-center"> {{cpu.cpuClockRate}} </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="cpuGaming">
-        <mat-header-cell *matHeaderCellDef> Gaming </mat-header-cell>
-        <mat-cell *matCellDef="let cpu"> {{cpu.cpuGaming}} </mat-cell>
+        <th mat-header-cell *matHeaderCellDef class="cell-center"> Gaming </th>
+        <td mat-cell *matCellDef="let cpu" class="cell-center"> {{cpu.cpuGaming}} </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="cpuTDP">
-        <mat-header-cell *matHeaderCellDef> TDP </mat-header-cell>
-        <mat-cell *matCellDef="let cpu"> {{cpu.cpuTDP}} </mat-cell>
+        <th mat-header-cell *matHeaderCellDef class="cell-center"> TDP </th>
+        <td mat-cell *matCellDef="let cpu" class="cell-center"> {{cpu.cpuTDP}} </td>
       </ng-container>
 
       <ng-container matColumnDef="cpuThreads">
-        <mat-header-cell *matHeaderCellDef> Threads </mat-header-cell>
-        <mat-cell *matCellDef="let cpu"> {{cpu.cpuThreads}} </mat-cell>
+        <th mat-header-cell *matHeaderCellDef class="cell-center"> Threads </th>
+        <td mat-cell *matCellDef="let cpu" class="cell-center"> {{cpu.cpuThreads}} </td>
       </ng-container>
 
       <ng-container matColumnDef="cpuType">
-        <mat-header-cell *matHeaderCellDef> Type </mat-header-cell>
-        <mat-cell *matCellDef="let cpu"> {{cpu.cpuType}} </mat-cell>
+        <th mat-header-cell *matHeaderCellDef class="cell-center"> Type </th>
+        <td mat-cell *matCellDef="let cpu" class="cell-center"> {{cpu.cpuType}} </td>
       </ng-container>
 
       <ng-container matColumnDef="cpuIntegratedGPU">
-        <mat-header-cell *matHeaderCellDef>Integrated GPU </mat-header-cell>
-        <mat-cell *matCellDef="let cpu"> {{cpu.cpuIntegratedGPU}} </mat-cell>
+        <th mat-header-cell *matHeaderCellDef class="cell-center">Integrated GPU </th>
+        <td mat-cell *matCellDef="let cpu" class="cell-center"> {{cpu.cpuIntegratedGPU}} </td>
       </ng-container>
-  
-      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-    </mat-table>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+    </table>
   </div>
-  
+
   <footer></footer>
-  
-  
-  
+
+
+
