--- a/frontend-application/src/app/components/purposes/purposes.component.html
+++ b/frontend-application/src/app/components/purposes/purposes.component.html
@@ -63,11 +63,6 @@
   <div class="table-header" *ngIf="isSearched">
     <p class="table-title">Purposes</p>
   <mat-table #table [dataSource]="dataSource">
-
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-
-    <!-- Position Column -->
     <ng-container matColumnDef="position">
       <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.position}} </mat-cell>
@@ -97,7 +92,7 @@
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
 </div>
-
+</div>
 <footer></footer>
 
 
