--- a/frontend-application/src/app/components/search-ram/search-ram.component.html
+++ b/frontend-application/src/app/components/search-ram/search-ram.component.html
@@ -1,6 +1,4 @@
-<mat-card elevation="5" fxFlex class="content">
-    <div class="row">
-      <div>
+<mat-card>
     <mat-form-field class="ml" appearance="outline">
       <mat-label>Min Capacity</mat-label>
       <input type="number" [(ngModel)]="minCapacity"  matInput placeholder="Enter min capacity"/>
@@ -31,61 +29,55 @@
       <input type="number" [(ngModel)]="maxVoltage" matInput placeholder="Enter max voltage"/>
       <mat-icon matPrefix>search</mat-icon>
     </mat-form-field>
-      </div>
-    </div>
     <button class="btn" mat-raised-button type="submit" color="primary" (click)="searchRam()">Search</button>
     <button *ngIf="isSearched" mat-button mat-ripple (click)="clearSearch()">
       <mat-icon color= "primary" matTooltip="clear search"> cancel_presentation</mat-icon>
     </button>
   </mat-card>
 
-  <div *ngIf="isSearched"class="container">
+  <div class="container" *ngIf="isSearched" >
     <div class="table-header" *ngIf="isSearched">
       <p class="table-title">RAMs</p>
-    <mat-table #table [dataSource]="dataSource">
-  
-      <!--- Note that these columns can be defined in any order.
-            The actual rendered columns are set as a property on the row definition" -->
-  
-      <!-- Position Column -->
+      <p *ngIf="notFound" class="table-title"> No RAMs found for entered parameters!</p>
+    </div>
+    <table *ngIf="isSearched" mat-table [dataSource]="dataSource">
       <ng-container matColumnDef="name">
-        <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-        <mat-cell *matCellDef="let ram"> {{ram.name}} </mat-cell>
+        <th mat-header-cell *matHeaderCellDef class="cell-center"> Name </th>
+        <td mat-cell *matCellDef="let ram" class="cell-center"> {{ram.name}} </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="capacity">
-        <mat-header-cell *matHeaderCellDef> Capacity </mat-header-cell>
-        <mat-cell *matCellDef="let ram"> {{ram.capacityInGB}} </mat-cell>
+        <th mat-header-cell *matHeaderCellDef class="cell-center"> Capacity [GB]</th>
+        <td mat-cell *matCellDef="let ram" class="cell-center"> {{ram.capacityInGB}} </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="maxFrequency">
-        <mat-header-cell *matHeaderCellDef> Max frequency </mat-header-cell>
-        <mat-cell *matCellDef="let ram"> {{ram.maxFrequencyInMHz}} </mat-cell>
+        <th mat-header-cell *matHeaderCellDef class="cell-center"> Max frequency [MHz]</th>
+        <td mat-cell *matCellDef="let ram" class="cell-center"> {{ram.maxFrequencyInMHz}} </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="voltage">
-        <mat-header-cell *matHeaderCellDef> Voltage </mat-header-cell>
-        <mat-cell *matCellDef="let ram"> {{ram.voltage}} </mat-cell>
+        <th mat-header-cell *matHeaderCellDef class="cell-center"> Voltage </th>
+        <td mat-cell *matCellDef="let ram" class="cell-center"> {{ram.voltage}} </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="latency">
-        <mat-header-cell *matHeaderCellDef> Latency </mat-header-cell>
-        <mat-cell *matCellDef="let ram"> {{ram.latency}} </mat-cell>
+        <th mat-header-cell *matHeaderCellDef class="cell-center"> Latency </th>
+        <td mat-cell *matCellDef="let ram" class="cell-center"> {{ram.latency}} </td>
       </ng-container>
 
       <ng-container matColumnDef="type">
-        <mat-header-cell *matHeaderCellDef> Type </mat-header-cell>
-        <mat-cell *matCellDef="let ram"> {{ram.type}} </mat-cell>
+        <th mat-header-cell *matHeaderCellDef class="cell-center"> Type </th>
+        <td mat-cell *matCellDef="let ram" class="cell-center"> {{ram.type}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="rgb">
-        <mat-header-cell *matHeaderCellDef> Has rgb </mat-header-cell>
-        <mat-cell *matCellDef="let ram"> {{ram.hasRGB}} </mat-cell>
+      <ng-container matColumnDef="rgb" >
+        <th mat-header-cell *matHeaderCellDef class="cell-center"> Has rgb </th>
+        <td mat-cell *matCellDef="let ram" class="cell-center"> {{ram.hasRGB}} </td>
       </ng-container>
-  
-      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-    </mat-table>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
   </div>
-  
+
   <footer></footer>
