Implemented search upgrade for components on frontend

--- a/frontend-application/src/app/components/header/header.component.html
+++ b/frontend-application/src/app/components/header/header.component.html
@@ -13,7 +13,7 @@
     <button mat-button mat-ripple routerLink="/ssdSearch">
       <span>Search ssd</span>
     </button>
-    <button mat-button mat-ripple routerLink="/">
+    <button mat-button mat-ripple routerLink="/upgrade-component">
       <span>Find upgrades of components</span>
     </button>
     <button mat-button mat-ripple routerLink="/purposes">
