--- a/frontend-application/src/app/components/cpu-search/cpu-search.component.html
+++ b/frontend-application/src/app/components/cpu-search/cpu-search.component.html
@@ -29,7 +29,7 @@
       <input type="number" matInput [(ngModel)]="maxClockRate" placeholder="Enter minimum clock rate"/>
       <mat-icon matPrefix>search</mat-icon>
     </mat-form-field>
-    <button class="btn" mat-raised-button type="submit" color="primary" (click)="searchCpu()">Search</button>
+    <button class="btn" mat-raised-button type="submit" color="primary" (click)="searchCpu()">SEARCH</button>
     <button *ngIf="isSearched" mat-button mat-ripple (click)="clearSearch()">
       <mat-icon color= "primary" matTooltip="clear search"> cancel_presentation</mat-icon>
     </button>
