--- a/frontend-application/src/app/components/ssd-search/ssd-search.component.html
+++ b/frontend-application/src/app/components/ssd-search/ssd-search.component.html
@@ -29,7 +29,7 @@
       <input type="number" matInput [(ngModel)]="maxWriteSpeed" placeholder="Enter maximum write speed"/>
       <mat-icon matPrefix>search</mat-icon>
     </mat-form-field>
-    <button class="btn" mat-raised-button type="submit" color="primary" (click)="searchSsd()">Search</button>
+    <button class="btn" mat-raised-button type="submit" color="primary" (click)="searchSsd()">SEARCH</button>
     <button *ngIf="isSearched" mat-button mat-ripple (click)="clearSearch()">
       <mat-icon color= "primary" matTooltip="clear search"> cancel_presentation</mat-icon>
     </button>
