Quick styling fix

--- a/frontend-application/src/app/components/header/header.component.html
+++ b/frontend-application/src/app/components/header/header.component.html
@@ -17,7 +17,7 @@
       <span>Find upgrades of components</span>
     </button>
     <button mat-button mat-ripple routerLink="/purposes">
-      <span>Find the purpose</span>
+      <span>Find the purposes</span>
     </button>
     <button mat-button mat-ripple routerLink="/symptoms">
       <span>Find the causes of computer symptoms</span>
