--- a/frontend-application/src/app/components/purposes/purposes.component.css
+++ b/frontend-application/src/app/components/purposes/purposes.component.css
@@ -26,9 +26,11 @@ mat-spinner {
   margin: 20px auto 0 auto;
 }
 
-.btn{
-  width: 45%;
-  margin: 5px auto 0 auto;
+.btn {
+  margin-left: 10px;
+  height: 50px;
+  width: 160px;
+  border-radius: 10px;
 }
 
 .ml {
