--- a/frontend-application/src/app/components/purposes/purposes.component.html
+++ b/frontend-application/src/app/components/purposes/purposes.component.html
@@ -53,7 +53,7 @@
   </mat-form-field>
     </div>
   </div>
-  <button class="btn" mat-raised-button type="submit" color="primary" (click)="findPurposes()">Search for purposes</button>
+  <button class="btn" mat-raised-button type="submit" color="primary" (click)="findPurposes()">SEARCH PURPOSES</button>
   <button *ngIf="isSearched" mat-button mat-ripple (click)="clearSearch()">
     <mat-icon color= "primary" matTooltip="clear search"> cancel_presentation</mat-icon>
   </button>
