Implemented find similar computers on frontend

--- a/frontend-application/src/app/components/header/header.component.html
+++ b/frontend-application/src/app/components/header/header.component.html
@@ -22,6 +22,9 @@
     <button mat-button mat-ripple routerLink="/symptoms">
       <span>Find the causes of computer symptoms</span>
     </button>
+    <button mat-button mat-ripple routerLink="/similar-computers">
+      <span>Find similar computers</span>
+    </button>
     <span class="example-spacer"></span>
   </mat-toolbar>
 </p>
